# iot-electric-meter

./: CMakeLists.txt  sdkconfig  sdkconfig.old
components/esp_pzem/: CMakeLists.txt  pzem.c  pzem.h
components/lcd20x4/: CMakeLists.txt  hd44780.h  lcd2004.c  lcd2004.h
components/time_sntp/: CMakeLists.txt  time_sntp.c  time_sntp.h
main/: CMakeLists.txt  LCD20x4.c  MQTT.c  MQTT.h  api.h  control.h  dht22.c  dht22.h  gpio_app.c  gpio_app.h  handle.h  hd44780.c  httpServer.c  httpServer.h  http_server.c  include.h  lcd.h  lcd2004_app.c  lcd2004_app.h  main.c  mq2.c  mq2.h  mqtt_app.c  nvs.c  nvs_app.c  nvs_app.h  rgb_led.c  rgb_led.h  tasksCommon.h  userGPIOs.c  wifiApplication.c  wifiApplication.h  wifi_app.c
main/aws_iot/: config_aws_iot.h  demo_config.h  mqtt_demo_mutual_auth.c
main/certs/: client.crt  client.key
main/components/hd44780/: config.h
main/time/: sntp_time_sync.c
main/time_sntp/: time_sntp.cpp  time_sntp.h
main/webpage/: app.css  app.js  index.html
